k8s/frontend-strip-prefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-frontend-prefix
spec:
  stripPrefix:
    prefixes:
    - /frontend
