k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
  - port: 80
    targetPort: 5173
